--- a/task1.html
+++ b/task1.html
@@ -7,12 +7,22 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-   <div class="container">
+   <!-- <div class="container">
     <header class="header"></header>
     <nav class="nav1"></nav>
     <nav class="nav2"></nav>
 <main class="section"></main>
 <footer class="footer"></footer>
-   </div> 
+   </div>  -->
+   <div class="container">
+    <header class="header">
+        <nav class="nav-1"></nav>
+        <nav class="nav-2"></nav>
+    </header>
+    <section></section>
+    <section></section>
+    <section></section>
+    <footer class="footer"></footer>
+</div>
 </body>
 </html>
